--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!----------------------------------------------------** 4 Section de Mohammed**------------------------------------------------>
     <div class="headerHero">
         <div class="menu">
             <img class="menu__logo" src="/Assets/Image 1.png" alt="">
@@ -24,6 +25,10 @@
             </ul>
         </div>
     </div>
+
+
+    <!--------------------------------------------------------** 4 Section de Achraf**---------------------------------------------------------->
+
 
 </body>
 
