--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 
 
     <!--------------------------------------------------------** 4 Section de Achraf**---------------------------------------------------------->
-
+    <section class="rejoignezNous">
+        <h1 class="rejoignezNous__quote">"Nature is not a place to visit. <span class="rejoignezNous__quote--color">It is home."</span></h1>
+        <p class="rejoignezNous__para">Rejoignez-nous et venez découvrir la nature ensemble.</p>
+        <button class="rejoignezNous__button--membre">Devenir membre</button>
+        <button class="rejoignezNous__button--contactez">Contactez nous</button>
+    </section>
 
 </body>
 
