Rejoignez nous section Version desktop
Work done.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Kolna Explorer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/accueil.css">
+
+    <!--Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
+
+
+
 </head>
 
 <body>
@@ -29,10 +37,14 @@
 
     <!--------------------------------------------------------** 4 Section de Achraf**---------------------------------------------------------->
     <section class="rejoignezNous">
-        <h1 class="rejoignezNous__quote">"Nature is not a place to visit. <span class="rejoignezNous__quote--color">It is home."</span></h1>
+        <div class="rejoignezNous__img">
+        <h1 class="rejoignezNous__quote">"Nature is not a place to visit. <br><span class="rejoignezNous__quote--color">It is home.</span>"</h1>
         <p class="rejoignezNous__para">Rejoignez-nous et venez découvrir la nature ensemble.</p>
-        <button class="rejoignezNous__button--membre">Devenir membre</button>
-        <button class="rejoignezNous__button--contactez">Contactez nous</button>
+        <div class="rejoignezNous__button">
+        <button class="rejoignezNous__button--membre" data-wipe="Wipe Hover Effect"><span class="mbr">Devenir membre</span></button>
+        <button class="rejoignezNous__button--contactez"><span class="cnt">Contactez nous</span></button>
+    </div>
+    </div>
     </section>
 
 </body>
