Partenaires version DESKTOP
Découpage de la section.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
     </div>
     </div>
     </section>
+    <section class="partenaires">
+        <h1 class="partenaires__title">Nos partenaires</h1>
+    <div class="partenaires__wrapper">
+        <img class="partenaires__wrapper--part" src="/Assets/part1.png" alt="">
+        <img class="partenaires__wrapper--part" src="/Assets/part1.png" alt="">
+        <img class="partenaires__wrapper--part" src="/Assets/part1.png" alt="">
+        <img class="partenaires__wrapper--part" src="/Assets/part1.png" alt="">
+        <img class="partenaires__wrapper--part" src="/Assets/part1.png" alt="">
+    </div>
+    </section>
 
 </body>
 
