Footer version Desktop
Découpage de la section footer.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 
+    <!--Fontawesome-->
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+
 
 
 
@@ -55,6 +58,55 @@
         <img class="partenaires__wrapper--part" src="/Assets/part1.png" alt="">
         <img class="partenaires__wrapper--part" src="/Assets/part1.png" alt="">
     </div>
+    </section>
+    <footer>
+        <div class="footer">
+        <div class="footer__wrapper1">
+            <img src="/Assets/Image 1.png" alt="logo">
+            <div class="footer__wrapper1--email">
+                <p>Email: <a href="mailto:kolnaexplorer@gmail.com">kolnaexplorer@gmail.com</a></p>
+                <p>Phone: <a  href="tel:+212-661-123-456">+212-661-123-456</a></p>
+            </div>
+            <div class="footer__wrapper1--socialMedia">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+        <div class="footer__wrapper2">
+            <a href="#"><h1>À propos de nous</h1></a>
+            <a href="#"><h3>Notre équipe</h3></a>
+            <a href="#"><h3>Statut</h3></a>
+            <a href="#"><h3>Réglement intérieur</h3></a>
+        </div>
+        <div class="footer__wrapper3">
+                <a href="#"><h1>Nos activités</h1></a>
+                <a href="#"><h3>Randonnée</h3></a>
+                <a href="#"><h3>Développement humain</h3></a>
+                <a href="#"><h3>Afforestation</h3></a>
+        </div>
+        <div class="footer__wrapper4">
+                <a href="#"><h1>Destinations</h1></a>
+                <a href="#"><h1>Galerie</h1></a>
+                <a href="#"><h1>Évènements</h1></a>
+        </div>
+        <div class="footer__wrapper5">
+           <a href="#"><button class="footer__wrapper5--contact thm-btn">
+                <div>
+                        <i class="far fa-envelope-open"></i>
+                        <span>Contactez nous</span> 
+                </div>
+            </button></a>
+            <a href="#"><button class="footer__wrapper5--membre thm-btn"> 
+                <img src="/Assets/hiking.svg" alt="hiking">
+                    <span>Devenir membre</span>
+            </button></a>
+        </div>
+    </div>
+    </footer>
+    <section class="copyright">
+        <h3>Copyright © 2020 Designed by <span>YouCode Students</span></h3>
     </section>
 
 </body>
