--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     </div>
     </div>
     </section>
+    <section class="newsletter">
+        <h3 class="newsletter__title">Abonnez-vous à notre newsletter</h3>
+        <input class="newsletter__input" type="email" placeholder="Entrez votre email">
+        <button class="newsletter__abonner">Abonner</button>
+        <img src="/Assets/bg__newsletter.png" alt="">
+    </section>
     <section class="partenaires">
         <h1 class="partenaires__title">Nos partenaires</h1>
     <div class="partenaires__wrapper">
