--- a/index.html
+++ b/index.html
@@ -22,34 +22,20 @@
 
 <body>
     <!----------------------------------------------------** 4 Section de Mohammed**------------------------------------------------>
-
-    <nav>
-        <div class="logo">
-            <img class="logo__logo" src="/Assets/Image 1.png" alt="">
+    <div class="headerHero">
+        <div class="menu">
+            <img class="menu__logo" src="/Assets/Image 1.png" alt="">
+            <ul>
+                <li><a href="#">Acceuil</a></li>
+                <li><a href="#">À propos de nous</a></li>
+                <li><a href="#">Nos Activités</a></li>
+                <li><a href="#">Destination</a></li>
+                <li><a href="#">Galerie</a></li>
+                <li><a href="#">Événements</a></li>
+                <li><a href="#">More</a></li>
+            </ul>
         </div>
-        <ul class="navMenu">
-            <li><a class="active" href="#">Acceuil</a></li>
-            <li><a href="#">À propos de nous</a></li>
-            <li class="active" id="act"><a href="#">Nos Activités</a>
-                <ul class="smenu">
-                    <li class="active"><a href="">Activités Principales</a></li>
-                    <li class="active"><a href="">Destination</a></li>
-                    <li class="active"><a href="">Events</a></li>
-                </ul>
-            </li>
-
-            <li class="active"><a href="#">Galerie</a></li>
-            <li class="active"><a href="#">Blog</a></li>
-            <li class="active"><a href="#">Contact</a></li>
-        </ul>
-        <div class="burger">
-            <div class="burger__line1"></div>
-            <div class="burger__line2"></div>
-            <div class="burger__line3"></div>
-        </div>
-    </nav>
-
-
+    </div>
 
 
     <!--------------------------------------------------------** 4 Section de Achraf**---------------------------------------------------------->
@@ -62,6 +48,12 @@
         <button class="rejoignezNous__button--contactez"><span class="cnt">Contactez nous</span></button>
     </div>
     </div>
+    </section>
+    <section class="newsletter">
+        <h3 class="newsletter__title">Abonnez-vous à notre newsletter</h3>
+        <input class="newsletter__input" type="email" placeholder="Entrez votre email">
+        <button class="newsletter__abonner">Abonner</button>
+        <img src="/Assets/bg__newsletter.png" alt="">
     </section>
     <section class="partenaires">
         <h1 class="partenaires__title">Nos partenaires</h1>
@@ -122,7 +114,7 @@
     <section class="copyright">
         <h3>Copyright © 2020 Designed by <span>YouCode Students</span></h3>
     </section>
-    <script src="/js/script.js"></script>
+
 </body>
 
 </html>
