--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kolna Explorer</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/accueil.css">
+    <link rel="stylesheet" href="css/Rejoignez.css">
 
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
