Création partenaire.scss séparé

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/accueil.css">
     <link rel="stylesheet" href="css/Rejoignez.css">
+    <link rel="stylesheet" href="css/Partenaire.css">
 
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
