--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/accueil.css">
     <link rel="stylesheet" href="css/Rejoignez.css">
     <link rel="stylesheet" href="css/Partenaire.css">
+    <link rel="stylesheet" href="/css/Footer.css">
 
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
