--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
     </div>
     </div>
     </section>
+    <section class="newsletterTop"></section>
     <section class="newsletter">
         <h3 class="newsletter__title">Abonnez-vous à notre newsletter</h3>
-        <input class="newsletter__input" type="email" placeholder="Entrez votre email">
-        <button class="newsletter__abonner">Abonner</button>
-        <img src="/Assets/bg__newsletter.png" alt="">
+        <div class="newsletter__wrapper">
+        <input class="newsletter__wrapper--input" type="email" placeholder="Entrez votre email">
+        <button type="submit" class="newsletter__wrapper--abonner">Abonner</button>
+</div>
     </section>
     <section class="partenaires">
         <h1 class="partenaires__title">Nos partenaires</h1>
