--- a/contact.html
+++ b/contact.html
@@ -15,21 +15,20 @@
             <h3 class="contact__subtitle">Cras eu elit congue, placerat dui ut, tincidunt nisl.</h3>
             <div class="contact__wrapper">
                 <div class="wrapper__tel">
-                    <h3 class="wrapper__tel--title">Téléphone</h3>
                     <img class="wrapper__tel--icon" src="/Assets/phone.png" alt="phone">
+                    <h3 class="wrapper__tel--title">Téléphone</h3>
                     <p class="wrapper__tel--para">Cras eu elit congue, placerat dui ut, tincidunt nisl.</p>
-                    <a href="tel:+212-661-123-345" class="wrapper__tel--num">+212-661-123-345</a>
+                    <a href="tel:+212-661-123-345" class="wrapper__tel--num">+212661123345</a>
                 </div>
                 <div class="wrapper__email">
-                    <h3 class="wrapper__email--title">Email</h3>
                     <img class="wrapper__email--icon" src="/Assets/email.png" alt="email">
+                    <h3 class="wrapper__email--title">Email</h3>
                     <p class="wrapper__email--para">Cras eu elit congue, placerat dui ut, tincidunt nisl.</p>
-                    <a href="mailto:kolnaexplorer@gmail.com" class="wrapper__email--ema">
-                        <img class="wrapper__email--icon" src="/Assets/email.png" alt="email"></a>
+                    <a href="mailto:kolnaexplorer@gmail.com" class="wrapper__email--ema">kolnaexplorer@gmail.com</a>
                 </div>
                 <div class="wrapper__local">
-                    <h3 class="wrapper__local--title">Localisation</h3>
                     <img class="wrapper__local--icon" src="/Assets/local.png" alt="localisation">
+                    <h3 class="wrapper__local--title">Localisation</h3>
                     <p class="wrapper__local--para">Cras eu elit congue, placerat dui ut, tincidunt nisl.</p>
                     <a
                         href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39206.002432144705!2d-95.4973981212445!3d29.709510002925988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8640c16de81f3ca5%3A0xf43e0b60ae539ac9!2sGerald+D.+Hines+Waterwall+Park!5e0!3m2!1sen!2sin!4v1566305861440!5m2!1sen!2sin"
