--- a/contact.html
+++ b/contact.html
@@ -40,17 +40,17 @@
             <!-- section form -->
             <div class="contact__container">
             <div class="contact__form">
-                <h4 class="contact__form--title">Get In Touch !</h4>
+                <h4 class="contact__form--title">Entrer en contact!</h4>
                 <div id="message"></div>
                 <form
                     method="post" action="php/contact.php" name="contact-form" id="contact-form">
                     <div class="form__label1">
-                            <label>Votre nom<span class="text-danger"> *</span></label>
+                            <label>Votre Nom<span class="text-danger"> *</span></label>
                             <img src="/Assets/name.png" alt="personne">
                             <input  name="name" id="name" type="text"  placeholder="First Name :">
                     </div>
                     <div class="form__label2">
-                            <label>Votre email<span class="text-danger"> *</span></label>
+                            <label>Votre Email<span class="text-danger"> *</span></label>
                             <img src="/Assets/gmail.png" alt="gmail">
                             <input name="email"id="email" type="email"  placeholder="Your email :">
                     </div>
@@ -64,9 +64,9 @@
                             <img src="/Assets/msg.png" alt="message">
                             <textarea name="comments" id="comments" rows="4"  placeholder="Votre Message :"></textarea>
                     </div>
-                    <input type="submit" id="submit" name="send" class="form__btnSend" value="Envoyer le message">
-                    <div id="simple-msg"></div>
                 </form>
+                <input type="submit" id="submit" name="send" class="form__btnSend" value="Envoyer le message">
+                <div id="simple-msg"></div>
             </div>
             <div class="bgImg">
                 <img src="/Assets/bgcontact.png">
