--- a/galerie.html
+++ b/galerie.html
@@ -10,6 +10,57 @@
 </head>
 
 <body>
+    <!--------------------------------------------** M E N u **----------------------------------------------->
+    <nav>
+        <div class="logo">
+            <img class="logo__logo" src="/Assets/Image 1.png" alt="">
+        </div>
+        </div>
+        <ul class="navMenu">
+            <li><a class="active" href="#">Acceuil</a></li>
+            <li><a href="#">À propos de nous</a></li>
+            <li class="active" id="act"><a href="#">Nos Activités</a>
+                <ul class="smenu">
+                    <li class="active"><a href="">Activités Principales</a></li>
+                    <li class="active"><a href="">Destination</a></li>
+                    <li class="active"><a href="">Events</a></li>
+                </ul>
+            </li>
+
+            <li class="active"><a href="#">Galerie</a></li>
+            <li class="active"><a href="#">Blog</a></li>
+            <li class="active"><a href="#">Contact</a></li>
+        </ul>
+        <div class="burger">
+            <div class="burger__line1"></div>
+            <div class="burger__line2"></div>
+            <div class="burger__line3"></div>
+        </div>
+    </nav>
+    <!---------------------------------------** F I N **---------------------------------------------->
+    <!-------------------------------** H E A D E R - H E R O **---------------------------------------->
+    <div class="headerHero">
+
+        <!--------------------------------------------------------------------------------------------------------------->
+        <div class="txtHeader">
+            <h1 class="txtHeader__tit1">Kolna Explorer</h1>
+            <h1 class="txtHeader__tit2">Découvrir la nature</h1>
+        </div>
+        <!---------------------------------------------------------------------------------------------------------------->
+        <div class="btnheader">
+            <input type="button" class="btnH1" onclick="location.href='#';" value="Devenir membre" />
+            <input type="button" class="btnH1 btnH2" onclick="location.href='#';" value="À propos de nous" />
+        </div>
+        <!---------------------------------------------------------------------------------------------------------------->
+        <div class="imgHero">
+            <img class="imgHero__imgSld" src="/Assets/illustration1.png" alt="imgHeader">
+        </div>
+        <!---------------------------------------------------------------------------------------------------------------->
+
+    </div>
+    <!--------------------------------------** F I N - H E A D E R - H E R O **------------------------------------------>
+
+
     <div class="galerie">
         <h1 class="galerie__h1">Galerie</h1>
         <p class="galerie__p1">Voir notre incroyable photos et vidéos</p>
@@ -34,7 +85,7 @@
         <p class="galerie__p2"> 1234</p>
     </div>
 
-    
+
 </body>
 
 </html>
