--- a/galerie.html
+++ b/galerie.html
@@ -86,6 +86,84 @@
     </div>
 
 
+
+
+
+    <!-----------------------------------------------** F O O T E R **------------------------------------------------------->
+    <div class="footerSec">
+        <div class="footerSec__Tit1">
+            <h1>Abonnez-vous à notre newsletter</h1>
+            <form class="formFooter">
+                <input class="formInput" type="text" id="lname" name="lname" placeholder=" Entrer votre email">
+                <input class="formBtn" type="submit" value="Abonner" onclick="location.href='#';">
+            </form>
+        </div>
+    </div>
+    <!-----------------------------------------------------last part----------------------------------------------------------------->
+    <div class="lastFooter">
+        <h1 class="lastFooter__titpart">Nos partenaires</h1>
+        <div class="footerPart">
+            <img class="footerPart__imgPart" src="/Assets/Groupe85.png" alt="partenaire">
+            <img class="footerPart__imgPart" src="/Assets/Groupe85.png" alt="partenaire">
+            <img class="footerPart__imgPart" src="/Assets/Groupe85.png" alt="partenaire">
+            <img class="footerPart__imgPart" src="/Assets/Groupe85.png" alt="partenaire">
+        </div>
+        <div class="footerInfo">
+            <!----------------------------------------------------------------->
+            <div class="foBloc1">
+                <img src="/Assets/logo.png" alt="logo">
+                <div class="foBloc1__infoCont">
+                    <p><b>Email :</b> kolnaexplorer@gmail.com</p>
+                    <p><b>Phone :</b> +212-661-123-456</p>
+                </div>
+                <div class="foBloc1__icofooter">
+                    <img class="icofooter" src="/Assets/twitter-footer.png" alt="twitter">
+                    <img class="icofooter" src="/Assets/facebook-footer.png" alt="facebook">
+                    <img class="icofooter" src="/Assets/insta-footer.png" alt="instagram">
+                    <img class="icofooter" src="/Assets/youtube-footer.png" alt="youtube">
+                </div>
+            </div>
+            <!---------------------------------------------------------------->
+            <div class="foBloc2">
+                <h2 class="foBloc2__title1">À propos de nous</h2>
+                <h4 class="foBloc2__title2"><a href="#">Notre équipe</a></h4>
+                <h4 class="foBloc2__title2"><a href="#">Statut</a></h4>
+                <h4 class="foBloc2__title2"><a href="#">Réglement intérieur</a></h4>
+            </div>
+            <!---------------------------------------------------------------->
+            <div class="foBloc3">
+                <h2 class="foBloc3__title1">Nos activités</h2>
+                <h4 class="foBloc3__title2"><a href="#">Randonnée</a></h4>
+                <h4 class="foBloc3__title2"><a href="#">Développement humain</a></h4>
+                <h4 class="foBloc3__title2"><a href="#">Afforestation</a></h4>
+            </div>
+            <!---------------------------------------------------------------->
+            <div class="foBloc4">
+                <h2 class="foBloc4__title"><a href="">Destinations</a></h2>
+                <h2 class="foBloc4__title"><a href="">Galerie</a></h2>
+                <h2 class="foBloc4__title"><a href="">Évènements</a></h2>
+
+            </div>
+            <!---------------------------------------------------------------->
+            <div class="foBloc5">
+                <button class="foBloc5__btnFtr btnFtr_marg" onclick="location.href='#';"><img class="imgBTN"
+                        src="/Assets/mail.png" alt="mail"> Contacter
+                    nous</button>
+                <button class="foBloc5__btnFtr" onclick="location.href='#';"><img class="imgBTN"
+                        src="/Assets/sports.png" alt="sport"> Devenir membre</button>
+            </div>
+            <!---------------------------------------------------------------->
+        </div>
+
+    </div>
+    <div class="copyright">
+        <h5>Copyright © 2020 Designed <span class="copyright__spano">by YouCode Students</span> </h5>
+    </div>
+
+
+
+    <!-------------------------------------------** F I N - F O O T E R **--------------------------------------------------->
+
 </body>
 
 </html>
