--- a/galerie.html
+++ b/galerie.html
@@ -60,7 +60,7 @@
     </div>
     <!--------------------------------------** F I N - H E A D E R - H E R O **------------------------------------------>
 
-
+    <!--------------------------------------** Galerie Section **------------------------------------------>
     <div class="galerie">
         <h1 class="galerie__h1">Galerie</h1>
         <p class="galerie__p1">Voir notre incroyable photos et vidéos</p>
@@ -87,7 +87,7 @@
 
 
 
-
+    <!--------------------------------------** Fin  Galerie Section **------------------------------------------>
 
     <!-----------------------------------------------** F O O T E R **------------------------------------------------------->
     <div class="footerSec">
